# StockScouterAI

./: .buildinfo  .gitignore  CNAME  LICENSE  README.md  app.html  data.db  dev-main-general.py  dev-query-main.py  dev-third-tier.py  e-test.py  gallery.apps.html  gallery.components.elements.dashboard.html  gallery.components.elements.html  gallery.components.html  gallery.html  gallery.utils.html  genindex.html  index.html  maain.py  main-ex.py  main.py  main_comparative.py  main_crm.py  main_oracle.py  main_snow.py  main_teradata.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  services.functions.data.html  services.functions.html  services.functions.managers.html  services.functions.responses.html  services.functions.storages.html  services.functions.transformers.html  (+6 more)
.streamlit/: config.toml
_modules/: index.html
_sources/: services.functions.rst  services.functions.transformers.rst  services.queries.py_tables.rst  services.queries.rst  services.utils.rst
app/: tests.py
data/: database.db
docs/: app.rst  conf.py  gallery.apps.rst  gallery.components.elements.dashboard.rst  gallery.components.elements.rst  gallery.components.rst  gallery.rst  gallery.utils.rst  index.rst  modules.rst  services.functions.data.rst  services.functions.managers.rst  services.functions.responses.rst  services.functions.storages.rst  services.functions.transformers.rst  services.queries.py_tables.rst  services.queries.rst  services.rst  services.types.rst
get_started/: back_base_tables.html  back_dev_tables.html  back_preprocessing.html  back_processing.html  back_transformers.html  chat.html  front_second_tier_dashboard.html  front_setup_dashboards.html  (+1 more)
(+593 files in other folders)
