[tool.poetry]
name = "stockscouterai"
version = "0.0.1"
description = "A user-friendly financial analytics platform for interactive querying of profitability, assets, liabilities, and more, with built-in AI chat support."
authors = ["ByteQuester <admin@capitabyte.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">=3"
anyio = ">=3.7.1"
certifi = ">=2023.11.17"
cryptography = ">=41.0.7"
flask = ">=2.3.2"
httpx = ">=0.25.2"
colorama = ">=0"
protobuf = ">=4"
matplotlib-inline = ">=0.1.6"
numpy = ">=1"
pathlib = ">=1.0.1"
pandas = ">=2.1.3"
pygments = ">=2.17.2"
python-decouple = ">=3.8"
pytz = ">=2023.3.post1"
jsonschema = ">=4"
requests = ">=2.31.0"
snowflake-connector-python = ">=3.5.0"
cachetools = ">=5.3.2,<5.4.0"
openai = ">=1.3.7,<1.4.0"
tiktoken = ">=0"
matplotlib = ">=3.8.2,<3.9.0"
seaborn = ">=0.13.0,<0.14.0"
mpld3 = ">=0.5.9,<0.6.0"
markdown = ">=3.4.4,<3.5.0"
beautifulsoup4 = ">=4.12.2,<4.13.0"
pyyaml = ">=6.0.1,<6.1.0"
streamlit-disqus = ">=0.1.3"
llama-index = ">=0.9.40"
streamlit-elements = ">=0.1.0"
streamlit = ">=1.31.0"
streamlit-player = ">=0.1.5"
pydantic = ">=1.9,<3"
sphinx = ">=7.2.6"
sphinx-book-theme = ">=1.1.0"
recommonmark = "*"
regex = "^2023.12.25"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
sphinx = ">=7.2.6"
sphinx-book-theme = "*"
recommonmark = "*"
yapf = "^0.40.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
toml = "^0.10.2"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
gradio = "^4.17.0"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
